Fix a missing icon and arrange edit panel align

--- a/docs/_sass/custom.cayman.scss
+++ b/docs/_sass/custom.cayman.scss
@@ -25,3 +25,8 @@ $article-size: 100%;
 .li-searchResult,.pages-li {
   color: white;
 }
+
+.feedback {
+  text-align: center;
+  padding: 10px;
+}
